[package]
name = "for-mqtt"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.3", features = ["im", "serde", "svg"] }
custom-utils = "0.10.12"
log = "0.4.17"
anyhow = "1.0.64"
sled = "0.34.7"
serde = {version ="1.0.144", features = ["derive", "rc"]}
serde_json = "1.0.85"
tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"]}
zerocopy = "0.6.0"
byteorder = "1.4.3"
config = {version="0.13.2" , features = ["toml", "json"]}
toml_edit = "0.14.4"
indexmap = "1.9.1"
notify = "5.0.0"
thiserror = "1.0.37"
rand = "0.8.5"
flexi_logger = { version = "0.24.0", features = ["specfile_without_notification", "specfile", "colors"], default-features = false }
crossbeam-channel = "0.5.6"

for-mqtt-client = { git = "https://github.com/jm-observer/for-mqtt-client.git"}

druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery.git"}

bytes = "1.4.0"
lazy_static = "1.4.0"
pretty-hex = "0.3.0"


chrono = "0.4.23"

piet = "0.6.2"
directories = "5.0.0"
backtrace = "0.3.67"
#[patch."https://github.com/jm-observer/for-mqtt-client.git"]
#for-mqtt-client = { path = "../for-mqtt-client"}
[patch.crates-io]
#piet = { path = "../piet/piet"}
piet = { git = "https://github.com/jm-observer/piet.git"}
#druid = { path = "../druid-fork/druid"}
#[patch.crates-io]
#custom-utils = { path = "../custom-utils"}

[build-dependencies]
chrono = "0.4.23"
anyhow = "1.0.69"

[profile.release]
lto = true
opt-level = 's'
debug = false
#strip = true
debug-assertions = false
codegen-units = 1
#panic = "abort"

[features]
default = ["prod"]
dev = ["custom-utils/dev"]
prod = ["custom-utils/prod"]
